syntax = "proto3";

package myko;

option go_package = "github.com/mykodev/myko/proto/myko;mykopb";

import "google/protobuf/timestamp.proto";

service Service {
  rpc Query(QueryRequest) returns (QueryResponse);
  rpc InsertEvents(InsertEventsRequest) returns (InsertEventsResponse);
}

message Event {
    string name = 1;

    double value = 2;
}

message Entry {
    // Target is where the cost or load is generated. It could be
    // a database cluster, a storage bucket, or a shared resource.
    string target = 1;

    // Origin is the identifier where the event has happened.
    // It could be an RPC method, background job, or a unique
    // ID a customer.
    string origin = 2;

    reserved 3; // reserved for attributes

    // Events happened in the current context.
    repeated Event events = 4;
}

message QueryRequest {
    string target = 1;

    string origin = 2;

    string event = 3;

    // TODO: Add start and end time.
}

message QueryResponse {
    repeated Event events = 1;
}

message InsertEventsRequest {
    repeated Entry entries = 1;
}

message InsertEventsResponse {
}
